--- a/UnitTestProject2/RowExists.csproj
+++ b/UnitTestProject2/RowExists.csproj
@@ -51,7 +51,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="RowExists.cs" />
+    <Compile Include="RowExists.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
